After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 730359 - gupnp-acl: Add missing return statements
gupnp-acl: Add missing return statements
Status: RESOLVED FIXED
Product: GUPnP
Classification: Other
Component: gupnp
unspecified
Other All
: Normal normal
: ---
Assigned To: GUPnP Maintainers
GUPnP Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-05-19 09:19 UTC by Philip Withnall
Modified: 2014-05-20 09:48 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
gupnp-acl: Add missing return statements (1.24 KB, patch)
2014-05-19 09:19 UTC, Philip Withnall
committed Details | Review

Description Philip Withnall 2014-05-19 09:19:47 UTC
Patch attached.
Comment 1 Philip Withnall 2014-05-19 09:19:49 UTC
Created attachment 276747 [details] [review]
gupnp-acl: Add missing return statements

Coverity issues: #60379, #60380
Comment 2 Jens Georg 2014-05-20 06:39:16 UTC
Review of attachment 276747 [details] [review]:

+1. Saw this as well when running clang's analyser but haven't gotten around to fix it
Comment 3 Philip Withnall 2014-05-20 09:48:50 UTC
Attachment 276747 [details] pushed as 1455e2b - gupnp-acl: Add missing return statements