gupnp-acl: Add missing return statements

Coverity issues: #60379, #60380

https://bugzilla.gnome.org/show_bug.cgi?id=730359